--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.0.2",
     "@mui/material-nextjs": "^6.0.2",
     "next": "14.2.8",
+    "nextjs-google-analytics": "^2.3.7",
     "react": "^18",
     "react-dom": "^18"
   },
