--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "@mui/material-nextjs": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.8",
     "nextjs-google-analytics": "^2.3.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
